# quant_trading_system

./: .env.example  .gitignore  AGENTS.ko.md  AGENTS.md  README.ko.md  README.md  REPO_GUIDE.md  docker-compose.yml  pyproject.toml
agents/: README.ko.md  README.md  paranoid-staff-engineer-reviewer.md  qa-engineer.md  quant-trading-expert.md  senior-backend-engineer-python.md  senior-frontend-engineer.md  stock-chart-analyst.md  ui-ux-designer.md
dags/: backfill_fundamentals.py  backfill_market_data.py  build_liquidity_universe.py  common.py  daily_incremental_pipeline.py  hourly_market_bootstrap.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: universe_cohorts.sql
dbt/models/: schema.yml  sources.yml
dbt/tests/: test_int_prices_universe_daily_pit_available_at.sql  test_mart_quality_lowvol_beta_optional.sql  test_mart_value_momentum_min_history.sql  test_stg_security_master_sector_coverage.sql
infra/airflow/: Dockerfile
infra/pgadmin/: servers.json
infra/web/: Dockerfile
references/: interview.md  mkt_timing_strategy.md  token_optimization.md
research_report/: quant_strategy_documentation_en.md  quant_strategy_documentation_ko.md  us_equity_backtest_data_requirements_en.md  us_equity_backtest_data_requirements_ko.md  us_equity_quant_factor_research_en.md  us_equity_quant_factor_research_ko.md
src/quant_data_platform/: __init__.py  audit.py  db.py  (+7 more)
tests/: conftest.py  test_alpha_vantage_client.py  test_config.py  test_fred_client.py  test_pipeline_fundamentals.py  test_sec_client.py  test_tiingo_client.py  test_universe.py  test_yfinance_client.py
(+76 files in other folders)
