[project]
name = "quant-data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.94",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
    "alpaca-py>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_data_platform"]

[project.scripts]
quant-pipeline = "quant_data_platform.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: live API integration tests that require external credentials",
]
